# ldid

./: .gitignore  CMakeLists.txt  Makefile  README.md  archive.sh  deb.sh  ios.sh  ldid.cpp  make.sh  version.sh
.github/workflows/: build.yml
